assets/scss/partials/_navigation.scss
.navigation {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background: var(--color-background);
    z-index: 999;
    border-bottom: 1px solid transparent;
    transition: border-color 400ms ease;

    &__grid {
        transition: opacity 400ms ease;
        gap: $spacing-2 $spacing-16;

        r-cell {
            display: flex;
            justify-content: start;
        }

        .pages {
            &__grid {
                width: 100%;
                padding: 0;
            }
        }
    }

    &.--muted {        
        border-bottom-color: var(--color-border);
        
        @include mobile(min) {
            .navigation__grid {
                opacity: 0.4;
                
                &:hover { opacity: 1; }
            }
        }
    }

    &__link {
        @include Link(box);
        text-decoration: none;
        display: flex;
        flex-direction: column;
        gap: $spacing-2;

        &::before {
            height: calc(100% + 4px);
        }

        .description {
            color: var(--color-grey);
        }
    }

    .name {
        position: relative;
        display: flex;
        gap: $spacing-12;
        align-items: center;

        .avatar {
            position: relative;
            width: 40px;
            height: 40px;
            overflow: hidden;
            border-radius: 50%;
            box-shadow: inset 0 0 0 1px rgba($color-grey, 0.1);
            flex-shrink: 0;

            img {
                width: 100%;
                height: 100%;
                object-fit: cover;
                position: relative;
                z-index: -1;
            }

            &__tooltip {
                position: absolute;
                top: 100%;
                left: 0;
                margin-top: $spacing-16;
                border-radius: var(--radius-inner);
                border: 1px solid var(--color-border);
                padding: $spacing-8 $spacing-12;
                background: var(--color-background);
                transform: translate(0, $spacing-4);
                opacity: 0;
                visibility: hidden;
                transition: 200ms ease;
                z-index: 99;

                @include mobile { width: 200%; }

                p {
                    @include Paragraph;

                    a { @include Link(box); }
                }

                &::before {
                    content: '';
                    width: 12px;
                    height: 12px;
                    transform: rotate(-45deg) translate(-50%, 0);
                    transform-origin: 0 50%;
                    border-radius: 0 4px 0 0;
                    border-top: 1px solid var(--color-border);
                    border-right: 1px solid var(--color-border);
                    position: absolute;
                    top: -7px;
                    left: 20px;
                    background: var(--color-background);
                }

                &::after {
                    content: '';
                    position: absolute;
                    bottom: 100%;
                    left: 0;
                    width: $spacing-40;
                    height: $spacing-32;
                }

                &:hover {
                    transform: translate(0);
                    opacity: 1;
                    visibility: visible;

                    @include mobile { transform: translate(0, -$spacing-2); }
                }
            }
            
            &:hover { 
                & + .avatar__tooltip {
                    transform: translate(0);
                    opacity: 1;
                    visibility: visible;

                    @include mobile { transform: translate(0, -$spacing-2); }
                }
            }
        }
    }

    .bars { display: none; }

    @include mobile {
        border-bottom: 1px solid var(--color-border);

        &__grid {
            height: var(--navigation-height);
            position: unset;
            background: var(--color-background);
        }

        .bars {
            appearance: none;
            position: absolute;
            display: block;
            top: 0;
            right: $spacing-8;
            height: var(--navigation-height);
            width: calc(#{$spacing-24} + 2 * #{$spacing-16});
            border: none;
            background: none;
            cursor: pointer;
            padding: 0;
    
            .bar {
                position: absolute;
                top: 50%;
                left: 50%;
                width: 24px;
                height: 1.6px;
                background: var(--color-foreground);
                transition: 200ms ease;

                &:nth-child(1) {
                    transform: translate(-50%, calc(-50% - #{$spacing-4}));
                }
                &:nth-child(2) {
                    transform: translate(-50%, calc(-50% + #{$spacing-4}));
                }
            }
        }

        .name {
            z-index: 1;
        }
        
        .pages {
            position: fixed;
            top: var(--navigation-height);
            left: 0;
            width: 100%;
            transform: translate(0, -100%);
            z-index: -1;
            transition: 400ms 300ms ease;
            border-bottom: 1px solid var(--color-border);

            &__grid {
                background: var(--color-background);
                row-gap: $spacing-24;
                z-index: 1;
                padding: $spacing-16;

                r-cell {
                    transform: translate(-#{$spacing-8}, 0);
                    opacity: 0;
                    transition: 200ms ease;

                    @for $i from 1 through 5 {
                        &:nth-child(#{$i}) { transition-delay: 50ms * $i; }
                    }
                }
            }
        }

        &.--open {
            .bars {
                .bar {
                    &:nth-child(1) {
                        transform: translate(-50%, -50%) rotate(-45deg);
                    }
                    &:nth-child(2) {
                        transform: translate(-50%, -50%) rotate(45deg);
                    }
                }
            }

            .pages {
                transition-delay: 0s;
                transform: translate(0);
                box-shadow: 0 0 64px 8px rgba($color-black, 0.1);

                r-cell {
                    transform: translate(0);
                    opacity: 1;

                    @for $i from 1 through 5 {
                        &:nth-child(#{$i}) { transition-delay: 300ms + 50ms * $i; }
                    }
                }
            }
        }
    }
}

